; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_set_user_rating_state.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_do_set_user_rating_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_hints_set_user_rating_state = type { i32 }

@LEV_HINTS_SET_USER_RATING_STATE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_set_user_rating_state(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.lev_hints_set_user_rating_state*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp sge i32 %7, 2
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %9, %2
  store i32 0, i32* %3, align 4
  br label %25

13:                                               ; preds = %9
  %14 = load i64, i64* @LEV_HINTS_SET_USER_RATING_STATE, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = add nsw i64 %14, %16
  %18 = load i32, i32* %4, align 4
  %19 = call %struct.lev_hints_set_user_rating_state* @alloc_log_event(i64 %17, i32 4, i32 %18)
  store %struct.lev_hints_set_user_rating_state* %19, %struct.lev_hints_set_user_rating_state** %6, align 8
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.lev_hints_set_user_rating_state*, %struct.lev_hints_set_user_rating_state** %6, align 8
  %22 = getelementptr inbounds %struct.lev_hints_set_user_rating_state, %struct.lev_hints_set_user_rating_state* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  %23 = load %struct.lev_hints_set_user_rating_state*, %struct.lev_hints_set_user_rating_state** %6, align 8
  %24 = call i32 @user_set_rating_state(%struct.lev_hints_set_user_rating_state* %23)
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %13, %12
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.lev_hints_set_user_rating_state* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @user_set_rating_state(%struct.lev_hints_set_user_rating_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
